--- a/index.Rmd
+++ b/index.Rmd
@@ -60,11 +60,12 @@ install.packages(c("shiny", "shinydashboard", "shinythemes", "shinyBS",
 - McMurdie and Holmes (2013) phyloseq: An R package for reproducible interactive analysis and graphics of microbiome census data. PLoS ONE 8(4):e61217. doi: <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0061217">10.1371/journal.pone.0061217</a>
 - Tarr G, Müller S, and Welsh AH (2015). mplot: An R package for graphical model stability and variable selection. <a href="http://arxiv.org/abs/1509.07583">arXiv:1509.07583 [stat.ME]</a>
 
-**Blog posts**
+****Online tutorials**
 
-- Affali, D (2015) [Building Shiny apps - an interactive tutorial](http://deanattali.com/blog/building-shiny-apps-tutorial/). Accessed 10 December 2015.
-- Parkkinen J (2014) [Interactive visualizations with R - a minireview](http://ouzor.github.io/blog/2014/11/21/interactive-visualizations.html). Accessed 10 December 2015.
-- Teach yourself Shiny, [shiny.rstudio.com/tutorial](http://shiny.rstudio.com/tutorial/)
+- Affali, D (2015). [Building Shiny apps - an interactive tutorial](http://deanattali.com/blog/building-shiny-apps-tutorial/). Accessed 10 December 2015.
+- Parkkinen J (2014). [Interactive visualizations with R - a minireview](http://ouzor.github.io/blog/2014/11/21/interactive-visualizations.html). Accessed 10 December 2015.
+- Galili T (2015). [How to learn R](http://www.r-bloggers.com/how-to-learn-r-2/). Accessed 11 December 2015.
+- RStudio (2015). [Teach yourself Shiny](http://shiny.rstudio.com/tutorial/).  Accessed 10 December 2015.
 
 ### Feedback
 
