--- a/labs/02/index.Rmd
+++ b/labs/02/index.Rmd
@@ -38,7 +38,7 @@ opts_chunk$set(tidy = TRUE, cache=FALSE)
 install.packages(c("shiny","igraph","WGCNA","devtools"))
 source("http://bioconductor.org/biocLite.R")
 biocLite(c("impute","GO.db","preprocessCore"))
-devtools::install_github("garthtarr/networkD3")
+devtools::install_github("garthtarr/networkD3", ref = "color")
 ```
 
 - Run the app using a command like (replace `~/Downloads/` with the path to the `pacmen` unzipped folder):
